# app/docs/swagger.yaml
@@ -13,6 +13,8 @@ definitions:
         type: string
       refresh_token:
         type: string
+      user:
+        $ref: '#/definitions/models.User'
     type: object
   controllers.RefreshTokenRequest:
     properties:
@@ -24,6 +26,40 @@ definitions:
       email:
         type: string
       password:
+        type: string
+    type: object
+  models.Role:
+    properties:
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  models.User:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: integer
+      last_name:
+        type: string
+      roles:
+        items:
+          $ref: '#/definitions/models.Role'
+        type: array
+      updated_at:
+        type: string
+      username:
         type: string
     type: object
 host: localhost:3000
@@ -94,6 +130,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/controllers.LoginResponse'
         "400":
           description: Bad Request
       tags:
@@ -114,6 +152,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/models.User'
         "400":
           description: Bad Request
       tags:
